--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
                 <a href="https://www.facebook.com/trisha.sarwade/"><img src="img/facebook.png"></a>
                 <a href="https://github.com/Trisha-Sarwade"><img src="img/github.png"></a>
-                <a href="#"><img src="img/gmail.png"></a>
+                <a href="mailto:orionph06@gmail.com "><img src="img/gmail.png"></a>
                 <a href="https://www.instagram.com/trisha.0.2/"><img src="img/instagram.png"></a>
                 <a href="https://www.linkedin.com/in/trisha-sarwade-82495b209/"><img src="img/linkedin.png"></a>
 
