--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
         <h2>Please Wait...</h2>
     </div>
 
+    <div class="content123">
+        <div class="topnav" id="myTopnav">
+            <a href="index.html" class="active">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="skills.html">Skills</a>
+            <a href="contact.html">Contact</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
 
-    <div class="topnav" id="myTopnav">
-        <a href="index.html" class="active">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="skills.html">Skills</a>
-        <a href="contact.html">Contact</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </div>
 
 
-
-    <div class="patterns">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
-        </style>
-        <svg width="100%" height="100%">
+        <div class="patterns">
+            <style>
+                @import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
+            </style>
+            <svg width="100%" height="100%">
             <defs>
                 <pattern id="polka-dots" x="0" y="0" width="100" height="100"
                      patternUnits="userSpaceOnUse">
@@ -54,23 +54,24 @@
                 Welcome!
             </text>
         </svg>
-        <div class="css-typing">
-            <p>
-                I'm Trisha Sarwade
-            </p>
-            <p>
-                A Second Year Undergraduate Student At IIT Kharagpur
-            </p>
-            <p>
-                From The Department Of Industrial And Systems Engineering
-            </p>
+            <div id="type">
+                <p>
+                    I'm Trisha Sarwade
+                </p>
+                <p>
+                    A Second Year Undergraduate Student At IIT Kharagpur
+                </p>
+                <p>
+                    From The Department Of Industrial And Systems Engineering
+                </p>
 
+            </div>
         </div>
 
 
 
 
-
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script>
             function myFunction() {
                 var x = document.getElementById("myTopnav");
@@ -81,12 +82,43 @@
                 }
             }
         </script>
-        <script>
+        <!--<script>
             const preloaderWrapperElement =
                 document.getElementById("preloaderWrapper");
             window.addEventListener("load", () => {
                 preloaderWrapperElement.style.display = "none";
             });
+        </script>-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- <script src="script/navbar.js"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <!-- <script src="vendor/jquery/dist/jquery.min.js"></script> -->
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+
+        <!-- <script src="vendor/jquery-validation/dist/jquery.validate.min.js"></script> -->
+
+
+        <!-- <script src="script/preloader.js"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+        <script type="text/javascript">
+            $(window).on('load', function() {
+                $(".preloader").fadeOut(2200, function() {
+                    $(".content123").fadeIn(10, function() {
+                        /*$("#type").classList.add("css-typing")*/
+                        document.querySelector("#type").classList.add("css-typing");
+                        console.log(document.querySelector("#type").classList)
+
+
+
+                    });
+
+                });
+            })
         </script>
 
 </body>
