--- a/about.html
+++ b/about.html
@@ -22,16 +22,18 @@
         </a>
     </div>
 
-    <div class="card">
-        <img src="img/background_index.jpg" alt="John" style="width:100%">
-        <h1>John Doe</h1>
-        <p class="title">CEO & Founder, Example</p>
-        <p>Harvard University</p>
-        <a href="#"><i class="fa fa-dribbble"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
+    <div class="card-back">
+        <div class="card">
+            <img src="img/me2.jpeg" alt="John" style="width:100%">
+            <h1>Trisha Sarwade</h1>
+            <p class="title">Student</p>
+            <p>Indian Institute of Technology, Kharagpur</p>
+
+            <!--<a href="#"><i class="fa fa-twitter"></i></a>
         <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <p><button>Contact</button></p>
+        <a href="#"><i class="fa fa-facebook"></i></a>-->
+            <p><button onclick="window.location.href = 'contact.html'">Contact</button></p>
+        </div>
     </div>
 
     <div class="pic-ctn">
