--- a/about.html
+++ b/about.html
@@ -2,7 +2,6 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles/header.css">
-    <link rel="stylesheet" type="text/css" href="styles/carousal.css">
     <link rel="stylesheet" type="text/css" href="styles/webcard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,14 +34,10 @@
             <p><button onclick="window.location.href = 'contact.html'">Contact</button></p>
         </div>
     </div>
-
-    <div class="pic-ctn">
-        <img src="https://picsum.photos/200/300?t=1" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=2" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=3" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=4" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=5" alt="" class="pic">
+    <div>
+        <p>test!!!!!!!!!!!!!!!<br><br><br>test2</p>
     </div>
+
 
 
 
