--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles/header.css">
     <link rel="stylesheet" type="text/css" href="styles/webcard.css">
+    <link rel="stylesheet" type="text/css" href="styles/about.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -34,8 +35,16 @@
             <p><button onclick="window.location.href = 'contact.html'">Contact</button></p>
         </div>
     </div>
-    <div>
-        <p>test!!!!!!!!!!!!!!!<br><br><br>test2</p>
+    <div class="outside">
+        <div class="middle">
+            <div class="container">
+                <img src="img/border.jpg" alt="Snow" style="width:65%;">
+                <div class="centered">
+                    <i>I'm Trisha Sarwade and I'm from Nashik, Maharashtra.<br> I'm pursuing a dual degree program in the department of Industrial and Systems Engineering. I've completed my higher secondary school education from St. Lawrence Highschool and
+                    Junior College in Nashik, and my secondary school education from Sri Chaitanya Techno School in Bengaluru.<br> I enjoy dancing and penning down my imaginative world.</i>
+                </div>
+            </div>
+        </div>
     </div>
 
 
