--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <div class="outside">
         <div class="middle">
             <div class="container">
-                <img src="img/border.jpg" alt="Snow" style="width:65%;">
+                <img src="img/border.jpg" alt="Snow">
                 <div class="centered">
                     <i>I'm Trisha Sarwade and I'm from Nashik, Maharashtra.<br> I'm pursuing a dual degree program in the department of Industrial and Systems Engineering. I've completed my higher secondary school education from St. Lawrence Highschool and
                     Junior College in Nashik, and my secondary school education from Sri Chaitanya Techno School in Bengaluru.<br> I enjoy dancing and penning down my imaginative world.</i>
