--- a/skills.html
+++ b/skills.html
@@ -12,8 +12,8 @@
 <body>
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
-        <a href="about.html" class="active">About Me</a>
-        <a href="skills.html">Skills</a>
+        <a href="about.html">About Me</a>
+        <a href="skills.html" class="active">Skills</a>
         <a href="contact.html">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
