--- a/rough.html
+++ b/rough.html
@@ -11,12 +11,77 @@
 </head>
 
 <body>
-    <div class="pic-ctn">
-        <img src="https://picsum.photos/200/300?t=1" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=2" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=3" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=4" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=5" alt="" class="pic">
+    <div class="align">
+        <div class="card-container">
+            <div class="card-vertical">
+                <div class="card-front">
+                    <article class="card-front-content">
+                        <h1>Animal </h1>
+                        <p>Hover Me</p>
+                        <p>Vertical 3D Card Flipping</p>
+                        <article>
+                </div>
+                <div class="card-back">
+                    <article class="card-back-content">
+                        <h1>The Dog</h1>
+                        <img src="http://i.imgsafe.org/ab5b14f.jpg">
+                        <article>
+                </div>
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card-horizontal">
+                <div class="card-front">
+                    <article class="card-front-content">
+                        <h1>The Food</h1>
+                        <p>Hover Me</p>
+                        <p>Horizontal 3D Card Flipping</p>
+                        <article>
+                </div>
+                <div class="card-back card-back-hr">
+                    <article class="card-back-content">
+                        <h1>Salad</h1>
+                        <img src="http://i.imgsafe.org/acb6ffc.jpg">
+                        <article>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <div class="card-vertical">
+                <div class="card-front">
+                    <article class="card-front-content">
+                        <h1>The City </h1>
+                        <p>Hover Me</p>
+                        <p>Vertical 3D Card Flipping</p>
+                        <article>
+                </div>
+                <div class="card-back">
+                    <article class="card-back-content">
+                        <h1>Random City</h1>
+                        <img src="http://i.imgsafe.org/ab5b14f.jpg">
+                        <article>
+                </div>
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card-horizontal">
+                <div class="card-front">
+                    <article class="card-front-content">
+                        <h1>Nature </h1>
+                        <p>Hover Me</p>
+                        <p>Horizontal 3D Card Flipping</p>
+                        <article>
+                </div>
+                <div class="card-back card-back-hr">
+                    <article class="card-back-content">
+                        <h1>Sea </h1>
+                        <img src="http://i.imgsafe.org/b0b7ba8.jpg">
+                        <article>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 
