--- a/skills.html
+++ b/skills.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="styles/flipcard.css">
     <link rel="stylesheet" type="text/css" href="styles/header.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,6 +20,150 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
+
+
+
+    <div class="everything">
+        <div class="align">
+            <div class="card-container">
+                <div class="card-vertical">
+                    <div class="card-front">
+                        <article class="card-front-content">
+                            <img src="img/html.png">
+                            <article>
+                    </div>
+                    <div class="card-back">
+                        <article class="card-back-content">
+                            <h1>HTML</h1>
+                            <p>its cool</p>
+                            <article>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card-vertical">
+                    <div class="card-front">
+                        <article class="card-front-content">
+                            <img src="img/css.png">
+                            <article>
+                    </div>
+                    <div class="card-back">
+                        <article class="card-back-content">
+                            <h1>HTML</h1>
+                            <p>its cool</p>
+                            <article>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container">
+                <div class="card-vertical">
+                    <div class="card-front">
+                        <article class="card-front-content">
+                            <img src="img/js.png">
+                            <article>
+                    </div>
+                    <div class="card-back">
+                        <article class="card-back-content">
+                            <h1>HTML</h1>
+                            <p>its cool</p>
+                            <article>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card-vertical">
+                    <div class="card-front">
+                        <article class="card-front-content">
+                            <img src="img/php.png">
+                            <article>
+                    </div>
+                    <div class="card-back">
+                        <article class="card-back-content">
+                            <h1>HTML</h1>
+                            <p>its cool</p>
+                            <article>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container">
+                <div class="card-vertical">
+                    <div class="card-front">
+                        <article class="card-front-content">
+                            <img src="img/python.png">
+                            <article>
+                    </div>
+                    <div class="card-back">
+                        <article class="card-back-content">
+                            <h1>HTML</h1>
+                            <p>its cool</p>
+                            <article>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card-vertical">
+                    <div class="card-front">
+                        <article class="card-front-content">
+                            <img src="img/sql.png">
+                            <article>
+                    </div>
+                    <div class="card-back">
+                        <article class="card-back-content">
+                            <h1>HTML</h1>
+                            <p>its cool</p>
+                            <article>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card-vertical">
+                    <div class="card-front">
+                        <article class="card-front-content">
+                            <img src="img/c.png">
+                            <article>
+                    </div>
+                    <div class="card-back">
+                        <article class="card-back-content">
+                            <h1>HTML</h1>
+                            <p>its cool</p>
+                            <article>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card-vertical">
+                    <div class="card-front">
+                        <article class="card-front-content">
+                            <img src="img/c++.png">
+                            <article>
+                    </div>
+                    <div class="card-back">
+                        <article class="card-back-content">
+                            <h1>HTML</h1>
+                            <p>its cool</p>
+                            <article>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div>lmao</div>
+
+        <!--<script src="card.js"></script>-->
+        <script>
+            function myFunction() {
+                var x = document.getElementById("myTopnav");
+                if (x.className === "topnav") {
+                    x.className += " responsive";
+                } else {
+                    x.className = "topnav";
+                }
+            }
+        </script>
+
 </body>
 
 </html>
