--- a/about.html
+++ b/about.html
@@ -22,20 +22,21 @@
         </a>
     </div>
 
-    <div class="card-back">
-        <div class="card">
-            <img src="img/me2.jpeg" alt="John" style="width:100%">
-            <h1>Trisha Sarwade</h1>
-            <p class="title">Student</p>
-            <p>Indian Institute of Technology, Kharagpur</p>
+    <div class="all">
+        <div class="card-back">
+            <div class="card">
+                <img src="img/me2.jpeg" alt="John" style="width:100%">
+                <h1>Trisha Sarwade</h1>
+                <p class="title">Student</p>
+                <p>Indian Institute of Technology, Kharagpur</p>
 
-            <!--<a href="#"><i class="fa fa-twitter"></i></a>
+                <!--<a href="#"><i class="fa fa-twitter"></i></a>
         <a href="#"><i class="fa fa-linkedin"></i></a>
         <a href="#"><i class="fa fa-facebook"></i></a>-->
-            <p><button onclick="window.location.href = 'contact.html'">Contact</button></p>
+                <p><button onclick="window.location.href = 'contact.html'">Contact</button></p>
+            </div>
         </div>
-    </div>
-    <div class="outside">
+        <!--<div class="outside">-->
         <div class="middle">
             <div class="container">
                 <img src="img/border.jpg" alt="Snow">
@@ -45,6 +46,7 @@
                 </div>
             </div>
         </div>
+        <!--</div>-->
     </div>
 
 
