--- a/skills.html
+++ b/skills.html
@@ -35,7 +35,9 @@
                     <div class="card-back">
                         <article class="card-back-content">
                             <h1>HTML</h1>
-                            <p>its cool</p>
+                            <p>
+                                <!--its cool-->HTML is the code that is used to structure a web page and its content.<br> It helps recognise, build and understand the fundamentals of the Web.
+                            </p>
                             <article>
                     </div>
                 </div>
@@ -49,8 +51,8 @@
                     </div>
                     <div class="card-back">
                         <article class="card-back-content">
-                            <h1>HTML</h1>
-                            <p>its cool</p>
+                            <h1>CSS</h1>
+                            <p>It is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.</p>
                             <article>
                     </div>
                 </div>
@@ -65,8 +67,8 @@
                     </div>
                     <div class="card-back">
                         <article class="card-back-content">
-                            <h1>HTML</h1>
-                            <p>its cool</p>
+                            <h1>Javascript</h1>
+                            <p>It is a dynamic computer programming language with object-oriented capabilities.<br>It helps build not just modern web applications for any device and platform.</p>
                             <article>
                     </div>
                 </div>
@@ -80,8 +82,8 @@
                     </div>
                     <div class="card-back">
                         <article class="card-back-content">
-                            <h1>HTML</h1>
-                            <p>its cool</p>
+                            <h1>PHP</h1>
+                            <p>It a server-side scripting language that is used to develop dynamic and interactive websites.<br></p>
                             <article>
                     </div>
                 </div>
@@ -96,8 +98,8 @@
                     </div>
                     <div class="card-back">
                         <article class="card-back-content">
-                            <h1>HTML</h1>
-                            <p>its cool</p>
+                            <h1>Python</h1>
+                            <p>It is a high level general-purpose programming language with dynamic semantics.<br>It is used to build websites and software, automate tasks and conduct data analysis.</p>
                             <article>
                     </div>
                 </div>
@@ -111,8 +113,8 @@
                     </div>
                     <div class="card-back">
                         <article class="card-back-content">
-                            <h1>HTML</h1>
-                            <p>its cool</p>
+                            <h1>SQL</h1>
+                            <p>It is a domain-specific language used in programming, designed for managing data.<br>It gives a better understanding of applications worked with on a daily basis</p>
                             <article>
                     </div>
                 </div>
@@ -126,8 +128,8 @@
                     </div>
                     <div class="card-back">
                         <article class="card-back-content">
-                            <h1>HTML</h1>
-                            <p>its cool</p>
+                            <h1>C</h1>
+                            <p>C is a general-purpose, procedural computer programming language.<br>It can be used for writing operating systems as well as doing application level programming.</p>
                             <article>
                     </div>
                 </div>
@@ -141,8 +143,8 @@
                     </div>
                     <div class="card-back">
                         <article class="card-back-content">
-                            <h1>HTML</h1>
-                            <p>its cool</p>
+                            <h1>C++</h1>
+                            <p>C++ is a general-purpose programming language with object-oriented features.<br>It helps with efficient memory management and pointers.</p>
                             <article>
                     </div>
                 </div>
