--- a/skills.html
+++ b/skills.html
@@ -152,7 +152,7 @@
 
         </div>
 
-        <div>lmao</div>
+        <div><br><br><br><br><br><br><br><br><br></div>
 
         <!--<script src="card.js"></script>-->
         <script>
