--- a/skills.html
+++ b/skills.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles/flipcard.css">
     <link rel="stylesheet" type="text/css" href="styles/header.css">
+    <link rel="stylesheet" type="text/css" href="styles/imgcard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -152,7 +153,33 @@
 
         </div>
 
-        <div><br><br><br><br><br><br><br><br><br></div>
+
+        <div class="container">
+            <div class="bg-items">
+                <div class="items1">
+                    <div class="eleven i"></div>
+                    <div class="eleven ii"></div>
+                    <div class="eleven iii"></div>
+                    <div class="eleven iv"></div>
+                    <div class="details">
+                        <h3>Bharatanatyam</h3>
+                        <p>Learnt for 7 years, mastering the 3 divisions of Nritta, Natya and Nritya</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-items">
+                <div class="items2">
+                    <div class="eleven i"></div>
+                    <div class="eleven ii"></div>
+                    <div class="eleven iii"></div>
+                    <div class="eleven iv"></div>
+                    <div class="details">
+                        <h3>Elocution</h3>
+                        <p>I've participated in the elocution competition, enhancing my communication skills and self-confidence.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!--<script src="card.js"></script>-->
         <script>
