--- a/skills.html
+++ b/skills.html
@@ -69,7 +69,7 @@
                     <div class="card-back">
                         <article class="card-back-content">
                             <h1>Javascript</h1>
-                            <p>It is a dynamic computer programming language with object-oriented capabilities.<br>It helps build not just modern web applications for any device and platform.</p>
+                            <p>It is a dynamic computer programming language with object-oriented capabilities.<br>It helps build modern web applications for any device and platform.</p>
                             <article>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                     <div class="eleven iv"></div>
                     <div class="details">
                         <h3>Bharatanatyam</h3>
-                        <p>Learnt for 7 years, mastering the 3 divisions of Nritta, Natya and Nritya</p>
+                        <p>I've learnt Bharatanatyam for 7 years, mastering the 3 divisions of Nritta, Natya and Nritya</p>
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                     <div class="eleven iv"></div>
                     <div class="details">
                         <h3>Elocution</h3>
-                        <p>I've participated in the elocution competition, enhancing my communication skills and self-confidence.</p>
+                        <p>I've participated in the Open IIT elocution competition, enhancing my communication skills and self-confidence.</p>
                     </div>
                 </div>
             </div>
