--- a/skills.html
+++ b/skills.html
@@ -163,7 +163,7 @@
                     <div class="eleven iv"></div>
                     <div class="details">
                         <h3>Bharatanatyam</h3>
-                        <p>I've learnt Bharatanatyam for 7 years, mastering the 3 divisions of Nritta, Natya and Nritya</p>
+                        <p>Learnt Bharatanatyam for 7 years, mastering the 3 divisions of Nritta, Natya and Nritya</p>
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                     <div class="eleven iv"></div>
                     <div class="details">
                         <h3>Elocution</h3>
-                        <p>I've participated in the Open IIT elocution competition, enhancing my communication skills and self-confidence.</p>
+                        <p>Participated in the Open IIT elocution competition, enhancing my communication skills and self-confidence.</p>
                     </div>
                 </div>
             </div>
