--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     I'm Trisha Sarwade
                 </p>
                 <p>
-                    A Second Year Undergraduate Student At IIT Kharagpur
+                    A Third Year Undergraduate Student At IIT Kharagpur
                 </p>
                 <p>
                     From The Department Of Industrial And Systems Engineering
